# lang_example

./: .gitignore  config_sample.yaml  pyproject.toml
src/simple_chatbot/: simple_chatbot.py  simple_chatbot_with_tools.py
